--- a/doc/theory.tex
+++ b/doc/theory.tex
@@ -377,12 +377,12 @@ Similarly, derivatives of $\epsilon$ are
 &=\xi-\zeta_a\chi^{-1}_{ab}\zeta_b.
 \end{align*}
 Next, we need to find derivatives of $P$ and $\epsilon$ w.r.t $T$ at fixed density,
-\begin{eqnarray}
+\begin{align*}\eqnumber
 \delta P&=\frac{\partial P}{\partial T}\delta T+\frac{\partial P}{\partial\tilde{\mu}_a}\delta\tilde{\mu}_a,\\
 \delta\rho_a&=\frac{\partial\rho}{\partial T}\delta T+\frac{\partial\rho_a}{\partial\tilde{\mu}_b}\delta\tilde{\mu}_b=0\\
 &=\frac{1}{T}\zeta_a\delta T+\chi_{ab}\delta\tilde{\mu}_b
-\end{eqnarray}
-Now, to find $\partial P/\partial \rho_a|_\epsilon$, 
+\end{align*}
+Now, to find $\partial P/\partial \rho_a|_\epsilon$,
 \begin{align*}\eqnumber
 \delta P&=\left.\frac{\partial P}{\partial\rho_a}\right|_T\delta\rho_a+\left.\frac{\partial P}{\partial T}\right|_\rho\delta T,\\
 \delta \epsilon&=\left.\frac{\partial \epsilon}{\partial\rho_a}\right|_T\delta\rho_a+\left.\frac{\partial \epsilon}{\partial T}\right|_\rho\delta T=0\\
